adding sidebar and protected route for sidebars

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aamasri/dialog": "^1.5.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-shimmer": "^3.2.0",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
